--- a/src/resources/views/admin/me/stored-categories.hbs
+++ b/src/resources/views/admin/me/stored-categories.hbs
@@ -1,10 +1,10 @@
-<h3>Danh mục của tôi</h3>
+<h3 class="p-2">Danh mục của tôi</h3>
 <div class="text-right mr-2 mb-2">
   <a class="btn btn-primary btn-xl ms-3" href="/admin/categories/create">
     <i class="fa fa-plus"></i>
   </a>
 </div>
-<table class="mt-4 table align-middle mb-0 bg-white table-hover">
+<table class="mt-2 table align-middle mb-0 bg-white table-hover">
   <thead class="bg-light">
     <tr>
       <th>#</th>
