--- a/src/resources/views/partials/dashboard.hbs
+++ b/src/resources/views/partials/dashboard.hbs
@@ -1,19 +1,18 @@
 <div
-  class=""
+  class="col-xl-2"
   style="position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
-    width: 200px;
     transition: all ease-in-out 0.5s;
     z-index: 9997;
     transition: all 0.5s;
     background: #e0e0e0;
     overflow-y: auto;"
 >
-  <aside class="w-100">
-    <nav class="navbar w-100">
-      <div class="navbar_dashboard w-100">
+  <aside class="row">
+    <nav class="navbar">
+      <div class="navbar_dashboard">
         <div class="navbar_dashboard-top">
           <a class="navbar-brand text-center d-block" href="/admin"><img
               src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
@@ -38,15 +37,20 @@
                   class="fa-solid fa-house"
                 ></i>
                 Trang chủ</a></li>
-            <li><a href="/admin/me/stored/products">Products</a></li>
+            <li><a href="/admin/me/stored/products"><i
+                  class="fa-solid fa-store"
+                ></i>Products</a></li>
             <li><a href="/admin/me/stored/categories"><i
                   class="fa-solid fa-rectangle-list"
                 ></i>Category</a></li>
+            <li><a href="/admin/me/stored/listComments"><i
+                  class="fa-solid fa-comment"
+                ></i>Comment</a></li>
             <li><a href="/admin/me/stored/listUser"><i
                   class="fa-solid fa-users"
                 ></i>
                 User</a></li>
-            <li><a href="/admin">Logout</a></li>
+            <li><a href="/">Logout</a></li>
           </ul>
         </div>
       </div>
