--- a/src/resources/views/admin/index.hbs
+++ b/src/resources/views/admin/index.hbs
@@ -1,1 +1,56 @@
 <h3>Đây là trang Admin</h3>
+<div class="row">
+  <div class="col-sm-6 col-lg-3 mb-3 mb-lg-5">
+    <a class="card h-100 d-block nav-link" href="/admin/me/stored/products">
+      <div class="card-body">
+        <h5 class="card-subtitle">Category</h5>
+        <div class="row align-items-center gx-2">
+          <div class="d-flex align-items-center">
+            <h2 class="card-title">{{countCategory}}</h2>
+            <span class="text">Sản phẩm</span>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+  <div class="col-sm-6 col-lg-3 mb-3 mb-lg-5">
+    <a class="card h-100 d-block nav-link" href="/admin/me/stored/products">
+      <div class="card-body">
+        <h5 class="card-subtitle">Products</h5>
+        <div class="row align-items-center gx-2">
+          <div class="d-flex align-items-center">
+            <h2 class="card-title">{{countProduct}}</h2>
+            <span class="text">Sản phẩm</span>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+  <div class="col-sm-6 col-lg-3 mb-3 mb-lg-5">
+    <a class="card h-100 d-block nav-link" href="/admin/me/stored/products">
+      <div class="card-body">
+        <h5 class="card-subtitle">User</h5>
+        <div class="row align-items-center gx-2">
+          <div class="d-flex align-items-center">
+            <h2 class="card-title">{{countUser}}</h2>
+            <span class="text">Sản phẩm</span>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+  <div class="col-sm-6 col-lg-3 mb-3 mb-lg-5">
+    <a class="card h-100 d-block nav-link" href="/admin/me/stored/products">
+      <div class="card-body">
+        <h5 class="card-subtitle">Comment</h5>
+        <div class="row align-items-center gx-2">
+          <div class="d-flex align-items-center">
+            <h2 class="card-title">{{countComment}}</h2>
+            <span class="text">Sản phẩm</span>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+
+</div>
