--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -26,10 +26,10 @@
     <div class="app">
       <main>
         <div class="row">
-          <div class="col-xl-2 row">
+          <div class="col-lg-2">
             {{> dashboard}}
           </div>
-          <div class="col-xl-10 container">
+          <div class="col-lg-10">
             {{{body}}}
           </div>
         </div>
@@ -50,6 +50,5 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-  
   </body>
 </html>
