update formatNumber price

--- a/src/resources/views/admin/me/stored-products.hbs
+++ b/src/resources/views/admin/me/stored-products.hbs
@@ -78,7 +78,8 @@
                 class="rounded"
                 alt=""
               /></td>
-            <td class="price text-danger font-weight-bold">{{this.price}}</td>
+            <td class="text-danger font-weight-bold">{{formatNumber this.price}}
+              đ</td>
             <td class="createdAt">{{this.createdAt}}</td>
             <td>
               <a
