--- a/src/resources/views/admin/index.hbs
+++ b/src/resources/views/admin/index.hbs
@@ -1,12 +1,15 @@
 <h3>Đây là trang Admin</h3>
-<div class="row">
+<div class="row p-2">
   <div class="col-sm-6 col-lg-3 mb-3 mb-lg-5">
-    <a class="card h-100 d-block nav-link" href="/admin/me/stored/products">
+    <a
+      class="card h-100 bg-primary text-light d-block nav-link"
+      href="/admin/me/stored/categories"
+    >
       <div class="card-body">
-        <h5 class="card-subtitle">Category</h5>
+        <h5 class="card-subtitle text-center">Category</h5>
         <div class="row align-items-center gx-2">
-          <div class="d-flex align-items-center">
-            <h2 class="card-title">{{countCategory}}</h2>
+          <div class="text-center">
+            <h2 class="card-title pr-3">{{countCategory}}</h2>
             <span class="text">Sản phẩm</span>
           </div>
         </div>
@@ -14,12 +17,15 @@
     </a>
   </div>
   <div class="col-sm-6 col-lg-3 mb-3 mb-lg-5">
-    <a class="card h-100 d-block nav-link" href="/admin/me/stored/products">
+    <a
+      class="card h-100 bg-warning text-white d-block nav-link"
+      href="/admin/me/stored/products"
+    >
       <div class="card-body">
-        <h5 class="card-subtitle">Products</h5>
+        <h5 class="card-subtitle text-center">Products</h5>
         <div class="row align-items-center gx-2">
           <div class="d-flex align-items-center">
-            <h2 class="card-title">{{countProduct}}</h2>
+            <h2 class="card-title pr-3">{{countProduct}}</h2>
             <span class="text">Sản phẩm</span>
           </div>
         </div>
@@ -27,12 +33,15 @@
     </a>
   </div>
   <div class="col-sm-6 col-lg-3 mb-3 mb-lg-5">
-    <a class="card h-100 d-block nav-link" href="/admin/me/stored/products">
+    <a
+      class="card h-100 d-block text-info nav-link"
+      href="/admin/me/stored/listComments"
+    >
       <div class="card-body">
-        <h5 class="card-subtitle">User</h5>
+        <h5 class="card-subtitle text-center">Comment</h5>
         <div class="row align-items-center gx-2">
           <div class="d-flex align-items-center">
-            <h2 class="card-title">{{countUser}}</h2>
+            <h2 class="card-title pr-3">{{countComment}}</h2>
             <span class="text">Sản phẩm</span>
           </div>
         </div>
@@ -40,12 +49,15 @@
     </a>
   </div>
   <div class="col-sm-6 col-lg-3 mb-3 mb-lg-5">
-    <a class="card h-100 d-block nav-link" href="/admin/me/stored/products">
+    <a
+      class="card h-100 bg-danger text-white d-block nav-link"
+      href="/admin/me/stored/listUser"
+    >
       <div class="card-body">
-        <h5 class="card-subtitle">Comment</h5>
+        <h5 class="card-subtitle text-center">User</h5>
         <div class="row align-items-center gx-2">
           <div class="d-flex align-items-center">
-            <h2 class="card-title">{{countComment}}</h2>
+            <h2 class="card-title pr-3">{{countUser}}</h2>
             <span class="text">Sản phẩm</span>
           </div>
         </div>
