--- a/src/resources/views/admin/products/create.hbs
+++ b/src/resources/views/admin/products/create.hbs
@@ -2,7 +2,18 @@
   <h3 class="text-center">Đăng sản phẩm</h3>
   <div class="col-lg-12 mt-3">
     <form action="/admin/products/store" method="post">
+      <select
+        class="form-control form-control-sm col-lg-3 checkbox-select-option mb-2"
+        name="categoryId"
+        required
+      >
+        <option class="text-center" value="">-- Lựa chọn danh mục --</option>
+        {{#each categories}}
+          <option value="{{this._id}}">{{this.slug}}</option>
+        {{/each}}
+      </select>
       <div class="row">
+
         <div class="col-md-6 form-group">
           <label for="name">Tên sản phẩm</label>
           <input
@@ -44,16 +55,7 @@
           placeholder="Enter year"
         />
       </div>
-      <select
-        class="form-control form-control-sm col-lg-3 checkbox-select-option"
-        name="categoryId"
-        required
-      >
-        <option class="text-center" value="">-- Lựa chọn danh mục --</option>
-        {{#each categories}}
-          <option value="{{this._id}}">{{this.slug}}</option>
-        {{/each}}
-      </select>
+
       <div class="form-group mt-3">
         <label for="price">Giá</label>
         <input
