update layout index and products

--- a/src/resources/views/admin/index.hbs
+++ b/src/resources/views/admin/index.hbs
@@ -8,9 +8,9 @@
       <div class="card-body">
         <h5 class="card-subtitle text-center">Category</h5>
         <div class="row align-items-center gx-2">
-          <div class="text-center">
+          <div class="d-flex align-items-center">
             <h2 class="card-title pr-3">{{countCategory}}</h2>
-            <span class="text">Sản phẩm</span>
+            <span class="text">Danh mục</span>
           </div>
         </div>
       </div>
@@ -26,7 +26,7 @@
         <div class="row align-items-center gx-2">
           <div class="d-flex align-items-center">
             <h2 class="card-title pr-3">{{countProduct}}</h2>
-            <span class="text">Sản phẩm</span>
+            <span class="text">Quyển sách</span>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
         <div class="row align-items-center gx-2">
           <div class="d-flex align-items-center">
             <h2 class="card-title pr-3">{{countComment}}</h2>
-            <span class="text">Sản phẩm</span>
+            <span class="text">Đánh giá</span>
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <div class="row align-items-center gx-2">
           <div class="d-flex align-items-center">
             <h2 class="card-title pr-3">{{countUser}}</h2>
-            <span class="text">Sản phẩm</span>
+            <span class="text">Tài Khoản</span>
           </div>
         </div>
       </div>
