--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     />
     {{! Link Css }}
-    <link rel="stylesheet" src="/css/app.css" />
+    <link rel="stylesheet" href="/css/admin.css" />
   </head>
   <body>
     <div class="app">
