--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -30,7 +30,7 @@
           <a class="nav-link text-dark" href="/categoryProduct">Sản phẩm</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="#">liên hệ</a>
+          <a class="nav-link text-dark" href="/introduce">Giới thiệu</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-dark" href="#">Liên hệ</a>
