--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,4 +1,4 @@
-.user-avatar {
+/* .user-avatar {
   width: 50px;
   height: 50px;
   border-radius: 50px;
@@ -13,4 +13,4 @@
   line-height: 1.2em; }
 
 ul {
-  list-style: none; }
+  list-style: none; } */
