--- a/src/resources/views/detaill.hbs
+++ b/src/resources/views/detaill.hbs
@@ -36,6 +36,21 @@
             <div class="product-price mt-2">
               <p class="text-danger">{{formatNumber product.price}} đ</p>
             </div>
+            <div class="add-cart">
+              <div class="so-luong-container">
+                <div class="so-luong-container">
+
+                  <button class="btn" onclick="truSoLuong()">-</button>
+                  <input
+                    type="number"
+                    id="soLuong"
+                    value="1"
+                    onchange="inputOnChange(event)"
+                  />
+                  <button class="btn" onclick="congSoLuong()">+</button>
+                </div>
+              </div>
+            </div>
             <div
               class="product-buy text-center rounded rounded-5 mt-1 mb-2 bg-danger text-white col-lg-4"
             >
@@ -106,46 +121,36 @@
             <div class="row">
               {{#each productRelated}}
                 <div
-                  class="col-lg-3 col-md-6 col-sm-6 mb-3 pagination pagination-circle"
+                  class="col-md-6 col-lg-3 d-flex align-items-stretch mt-3 mb-lg-2"
                 >
-                  <div class="card">
-                    <div
-                      class="card-image p-4 bg-image hover-overlay hover-zoom hover-shadow ripple"
-                    >
-                      <a
-                        href="/admin/products/{{this.slug}}"
-                        class="d-block rounded-lg lift lift-lg"
-                      >
+                  <div class="card h-100" style="">
+                    <div class="card-img-top p-2" style="height:260px">
+                      <a href="/admin/products/{{this.slug}}" class="d-block">
                         <img
-                          class="img-fluid rounded-lg"
+                          class="img-fluid h-100 w-100 d-block img-thumbnail"
                           src="{{this.image}}"
                           alt="{{this.image}}"
                         />
-                        <a href="#!">
-                          <div
-                            class="mask"
-                            style="background-color: hsla(195, 83%, 58%, 0.2)"
-                          ></div>
-                        </a>
                       </a>
                     </div>
-                    <div class="card-body card">
-                      <a href="/admin/products/{{this.slug}}">
+                    <div class="card-body">
+                      <a
+                        href="/admin/products/{{this.slug}}"
+                        class="nav-link text-dark d-block"
+                      >
                         <h5 class="card-title text-truncate">{{this.name}}</h5>
                       </a>
                       <p
-                        class="card-text text-truncate"
-                      >{{this.description}}</p>
-                      <p class="card-text text-danger text-right">{{formatNumber
-                          this.price
-                        }}
-                        đ</p>
+                        class="card-text text-danger text-right text-bold"
+                      >{{formatNumber this.price}}
+                        đ
+                      </p>
                     </div>
-                    <div class="card-footer">
-                      <button
-                        href="#"
+                    <div class="card-footer text-center">
+                      <a
+                        href="/admin/products/{{this.slug}}"
                         class="btn btn-primary bg-danger border-0"
-                      >Mua sản phẩm</button>
+                      >Mua sản phẩm</a>
                     </div>
                   </div>
                 </div>
@@ -331,7 +336,12 @@
                   >
                   </textarea>
                 </div>
-                <button type="submit">Gửi</button>
+                <div class="text-center">
+                  <button
+                    type="submit"
+                    class="px-4 py-2 w-50 bg-primary border-0 text-white rounded"
+                  >Gửi</button>
+                </div>
               </form>
             </div>
           </div>
