--- a/src/resources/views/partials/dashboard.hbs
+++ b/src/resources/views/partials/dashboard.hbs
@@ -34,23 +34,26 @@
         <div class="navbar_dashboard-list">
           <ul class="nav d-flex flex-column">
             <li><a class="text-dark" href="/admin"><i
-                  class="fa-solid fa-house"
+                  class="fa-solid fa-house mr-2"
                 ></i>
                 Trang chủ</a></li>
             <li><a href="/admin/me/stored/products"><i
-                  class="fa-solid fa-store"
+                  class="fa-solid fa-store mr-2"
                 ></i>Products</a></li>
             <li><a href="/admin/me/stored/categories"><i
-                  class="fa-solid fa-rectangle-list"
+                  class="fa-solid fa-rectangle-list mr-2"
                 ></i>Category</a></li>
             <li><a href="/admin/me/stored/listComments"><i
-                  class="fa-solid fa-comment"
+                  class="fa-solid fa-comment mr-2"
                 ></i>Comment</a></li>
             <li><a href="/admin/me/stored/listUser"><i
-                  class="fa-solid fa-users"
+                  class="fa-solid fa-users mr-2"
                 ></i>
                 User</a></li>
-            <li><a href="/">Logout</a></li>
+            <li><a href="/"><i
+                  class="fa-sharp fa-solid fa-right-from-bracket mr-2"
+                ></i>
+                Logout</a></li>
           </ul>
         </div>
       </div>
