--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -72,8 +72,7 @@
 
         <div class="col-lg-4 col-md-6 footer-newsletter text-white">
           <h4>Nguyễn Viết Quân</h4>
-          <p>Tamen quem nulla quae legam multos aute sint culpa legam noster
-            magna</p>
+          <p>Mời quý khách hàng liên hệ và gửi những điều thắc mắc dưới phần này!</p>
           <form action="" method="post">
             <input type="email" name="email" /><input
               type="submit"
