--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -33,7 +33,7 @@
           <a class="nav-link text-dark" href="/introduce">Giới thiệu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="#">Liên hệ</a>
+          <a class="nav-link text-dark" href="/order">Liên hệ</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
