finished updating the cart and admin order

--- a/src/resources/views/admin/index.hbs
+++ b/src/resources/views/admin/index.hbs
@@ -64,5 +64,21 @@
       </div>
     </a>
   </div>
+  <div class="col-sm-6 col-lg-3 mb-3 mb-lg-5">
+    <a
+      class="card h-100 bg-success text-white d-block nav-link"
+      href="/admin/me/stored/listOrders"
+    >
+      <div class="card-body">
+        <h5 class="card-subtitle text-center">Order</h5>
+        <div class="row align-items-center gx-2">
+          <div class="d-flex align-items-center">
+            <h2 class="card-title pr-3">{{countOrder}}</h2>
+            <span class="text">Đơn Hàng</span>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
 
 </div>
