--- a/src/resources/views/category-product.hbs
+++ b/src/resources/views/category-product.hbs
@@ -53,8 +53,10 @@
                   đ</p>
               </div>
               <div class="card-footer">
-                <button href="#" class="btn btn-primary bg-danger border-0">Mua
-                  sản phẩm</button>
+                <a
+                  href="/admin/products/{{this.slug}}"
+                  class="btn btn-primary bg-danger border-0"
+                >Mua sản phẩm</a>
               </div>
             </div>
           </div>
@@ -90,8 +92,10 @@
                   đ</p>
               </div>
               <div class="card-footer">
-                <button href="#" class="btn btn-primary bg-danger border-0">Mua
-                  sản phẩm</button>
+                <a
+                  href="/admin/products/{{this.slug}}"
+                  class="btn btn-primary bg-danger border-0"
+                >Mua sản phẩm</a>
               </div>
             </div>
           </div>
