--- a/src/resources/views/detaill.hbs
+++ b/src/resources/views/detaill.hbs
@@ -39,12 +39,12 @@
                   product.price
                 }}đ</p>
             </div>
-            <div class="add-cart">
+            <div class="add-cart mb-2">
               <div class="so-luong-container">
                 <div class="so-luong-container">
-
                   <button class="btn" onclick="truSoLuong()">-</button>
                   <input
+                    style="width: 50px;"
                     type="number"
                     id="soLuong"
                     value="1"
