--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,19 +1,19 @@
-<footer id="footer " class="bg-dark pt-5">
+<footer id="footer " class="bg-white pt-5" >
   <style>
     div.text-white>h3,h4{ margin-bottom: 30px; } 
-    ul.text-white>li>a{text-decoration: none;color: #ffffff;}
-    ul.text-white>li>a:hover{color: #ffc451;} 
+    ul.text-white>li>a{text-decoration: none;color: #565656;}
+    ul.text-white>li>a:hover{color: rgb(8,123,57);} 
     ul.text-white>li>i{ margin-right: 8px; } 
     .social-links{    display: flex;align-items: center;} 
-    .social-links>a{  padding: 10px ;border-radius: 8px;background-color: #292929;  margin-left: 5px;  text-align: center;  display: block;  color: white} 
-    .social-links>a:hover{  background-color: #ffc451;  color: #151515}
+    .social-links>a{  padding: 10px ;border-radius: 8px;background-color: #292929;  margin-left: 5px;  text-align: center;  display: block;  color: rgb(194, 194, 194)} 
+    .social-links>a:hover{  background-color:rgb(8,123,57);;  color: #ffffff}
   </style>
   <div class="footer-top">
     <div class="container">
       <div class="row">
 
         <div class="col-lg-3 col-md-6">
-          <div class="footer-info text-white">
+          <div class="footer-info text-dark">
             <h3>Adress<span>.</span></h3>
             <p>
               131 Nguyễn Xí, Hòa Minh
@@ -41,15 +41,15 @@
         <div class="col-lg-2 col-md-6 text-white">
           <h4>Liên hệ</h4>
           <ul class="text-white list-unstyled">
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">Home</a></li>
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">About us</a></li>
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">Services</a></li>
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">Terms of service</a></li>
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">Privacy policy</a></li>
           </ul>
         </div>
@@ -57,15 +57,15 @@
         <div class="col-lg-3 col-md-6 footer-links text-white">
           <h4>Category</h4>
           <ul class="text-white list-unstyled">
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">Sách văn học</a></li>
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">Sách kinh tế</a></li>
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">Sách chính trị</a></li>
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">Sách tôn giáo</a></li>
-            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+            <li><i class="fa-solid fa-chevron-right text-dark"></i>
               <a href="#">Sách thiếu nhi</a></li>
           </ul>
         </div>
@@ -73,10 +73,12 @@
         <div class="col-lg-4 col-md-6 footer-newsletter text-white">
           <h4>Nguyễn Viết Quân</h4>
           <p>Mời quý khách hàng liên hệ và gửi những điều thắc mắc dưới phần này!</p>
-          <form action="" method="post">
-            <input type="email" name="email" /><input
+          <form action="#" method="#" class="d-flex">
+            <input class="px-2 py-2 text-dark mr-2" type="email" name="email" />
+            <input style="background: rgb(8,123,57) !important;"
               type="submit"
               value="Subscribe"
+                class="px-2 py-2 border-none rounded text-white"
             />
           </form>
         </div>
