--- a/src/resources/views/checkout-cart.hbs
+++ b/src/resources/views/checkout-cart.hbs
@@ -1,6 +1,7 @@
 <div class="container-full my-2">
   <div class="p-3 col-xl-12 d-flex justify-content-between">
     <div class="col-xl-8 bg-white p-4 rounded mr-2">
+      <h3>Điền thông tin của bạn !</h3>
       <div class="row">
         <div class="col">
           <div class="form-outline">
