--- a/src/resources/views/partials/dashboard.hbs
+++ b/src/resources/views/partials/dashboard.hbs
@@ -15,7 +15,7 @@
       <div class="navbar_dashboard">
         <div class="navbar_dashboard-top">
           <a class="navbar-brand text-center d-block" href="/admin"><img
-              src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
+              src="https://scontent.fsgn2-7.fna.fbcdn.net/v/t39.30808-6/299911869_368316448787218_5994795139358466823_n.jpg?stp=dst-jpg_s851x315&_nc_cat=108&ccb=1-7&_nc_sid=da31f3&_nc_ohc=0BEDJwLkyfEAX95glp7&_nc_ht=scontent.fsgn2-7.fna&oh=00_AfBsDKMxGfQttC538I_apc-MiWBd8L8Gz8AVsMoXf_ROmw&oe=64453871"
               class="rounded-circle"
               style="width: 120px;"
               alt="Avatar"
@@ -50,6 +50,10 @@
                   class="fa-solid fa-users mr-2"
                 ></i>
                 User</a></li>
+            <li><a href="/admin/me/stored/listOrders"><i
+                  class="fa-solid fa-cart-shopping mr-2"
+                ></i>
+                Cart</a></li>
             <li><a href="/"><i
                   class="fa-sharp fa-solid fa-right-from-bracket mr-2"
                 ></i>
